# genetic_risk

./: CMakeLists.txt  GWAS.hxx  main.cpp
Google_tests/: CMakeLists.txt  test1.cxx
gen_risk_lib/: CMakeLists.txt  FlatFile.hxx  GWAS.hxx
